--- a/app/src/main/res/layout/fragment_info_list.xml
+++ b/app/src/main/res/layout/fragment_info_list.xml
@@ -3,16 +3,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.redrock.agriculture.Fragment.InfoListFragment">
 
-    <com.example.redrock.agriculture.Tools.CustomSwipeToRefreshView
+    <com.example.redrock.agriculture.widget.CustomSwipeToRefreshView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/swipelayout_main_content">
+        android:id="@+id/swipe_layout_main_content">
 
         <ListView
             android:id="@+id/list_main_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </ListView>
-    </com.example.redrock.agriculture.Tools.CustomSwipeToRefreshView>
+    </com.example.redrock.agriculture.widget.CustomSwipeToRefreshView>
 
 </FrameLayout>
